@@ -64,6 +64,7 @@ static R_CallMethodDef CallEntries[] = {
     CALLDEF(R_chebyshev_init, 2), // <-->    "
     CALLDEF(dpq_bd0, 6),     // <--> bd0.c
     CALLDEF(dpq_ebd0, 3),    //  "    "
+    CALLDEF(R_dpsifn, 4),    // <--> dpsifn.c
 
     {NULL, NULL, 0}
 };
